# bibmap

./: pyproject.toml
src/bibmap/: cli.py  utils.py
src/bibmap/api/: connections.py  data_transformation.py
src/bibmap/db/: ingestion.py  manager.py  mannager.py  queries.py
src/bibmap/network/: visualization.py
src/db/: schema.sql
