[project]
name = "bibmap"
version = "0.1.0"
description = "Visualize bibliometric maps"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "requests",
  "pyvis",
  "tqdm",
  "networkx",
  "numpy",
  "scipy",
  "matplotlib",
  "halo",
]

[project.scripts]
bibmap = "bibmap.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bibmap = ["db/schema.sql"]
